log/build_2023-04-11_21-46-27/my_ros2_package/stdout_stderr.log
running egg_info
writing ../build/my_ros2_package/my_ros2_package.egg-info/PKG-INFO
writing dependency_links to ../build/my_ros2_package/my_ros2_package.egg-info/dependency_links.txt
writing entry points to ../build/my_ros2_package/my_ros2_package.egg-info/entry_points.txt
writing requirements to ../build/my_ros2_package/my_ros2_package.egg-info/requires.txt
writing top-level names to ../build/my_ros2_package/my_ros2_package.egg-info/top_level.txt
reading manifest file '../build/my_ros2_package/my_ros2_package.egg-info/SOURCES.txt'
writing manifest file '../build/my_ros2_package/my_ros2_package.egg-info/SOURCES.txt'
running build
running build_py
running install
/home/roar/.local/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
byte-compiling /home/roar/jiamingzhang/ros2_ws/src/install/my_ros2_package/lib/python3.8/site-packages/my_ros2_package/calib_test_node.py to calib_test_node.cpython-38.pyc
  File "/home/roar/jiamingzhang/ros2_ws/src/install/my_ros2_package/lib/python3.8/site-packages/my_ros2_package/calib_test_node.py", line 116
    if counter == self.
                      ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/roar/jiamingzhang/ros2_ws/src/install/my_ros2_package/lib/python3.8/site-packages/my_ros2_package-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../build/my_ros2_package/my_ros2_package.egg-info to /home/roar/jiamingzhang/ros2_ws/src/install/my_ros2_package/lib/python3.8/site-packages/my_ros2_package-0.0.0-py3.8.egg-info
running install_scripts
Installing calibration_subscriber script to /home/roar/jiamingzhang/ros2_ws/src/install/my_ros2_package/lib/my_ros2_package
writing list of installed files to '/home/roar/jiamingzhang/ros2_ws/src/build/my_ros2_package/install.log'
